# h3-pg

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Dockerfile  META.json  Makefile  README.md  entrypoint.sh  h3.control  h3_postgis.control  pg_validate_extupgrade.toml
.github/: build-docker.sh
.github/docker/: Dockerfile  entrypoint.sh  tools.sh
.github/documentation/: generate.py  sql.lark
.github/tools/: Dockerfile
.github/workflows/: documentation.yml  pgxn.yml  test-linux.yml  test-macos.yml  test-windows.yml  test.yml
.tmp-tools/: Dockerfile  entrypoint.sh  make.bat
cmake/: AddPostgreSQLExtension.cmake  FindPostgreSQL.cmake  control.in
cmake/h3/: CMakeLists.txt
docker/: base.Dockerfile  build.Dockerfile  build.sh  develop.Dockerfile  develop.sh  pgxn.Dockerfile  pgxn.sh  test.sh
docs/: SKILL.md  api.md  development.md
h3/: CMakeLists.txt  h3.control  pg_validate_extupgrade.toml
h3/sql/install/: 00-type.sql  01-indexing.sql  02-inspection.sql  03-traversal.sql  04-hierarchy.sql  05-regions.sql  06-edge.sql  06-uniedge.sql  07-miscellaneous.sql  07-vertex.sql  08-miscellaneous.sql  10-operators.sql  11-opclass_btree.sql  12-opclass_hash.sql  13-opclass_brin.sql  14-opclass_gist.sql  14-opclass_spgist.sql  20-casts.sql  30-deprecated.sql  30-extension.sql  31-wkb.sql  99-deprecated.sql  99-postgis.sql
h3/sql/updates/: h3--0.1.0--0.2.0.sql  h3--0.2.0--0.3.0.sql  h3--0.3.0--0.3.1.sql  h3--0.3.2--0.4.0.sql  h3--0.4.0--1.0.0.sql  h3--1.0.0--1.0.1.sql  h3--1.0.6--3.4.0.sql  h3--3.4.1--3.5.0.sql  h3--3.5.0--3.6.0.sql  h3--3.6.0--3.6.1.sql  h3--3.6.1--3.6.2.sql  h3--3.6.2--3.6.3.sql  h3--3.6.3--3.6.4.sql  h3--3.6.4--3.6.5.sql  h3--3.6.5--3.7.0.sql  h3--3.7.0--3.7.1.sql  h3--3.7.0--unreleased.sql  h3--3.7.1--3.7.2.sql  h3--3.7.1--unreleased.sql  h3--3.7.2--4.0.0.sql  h3--4.0.0--4.0.1.sql  h3--4.0.0--unreleased.sql  h3--4.0.1--4.0.2.sql  h3--4.0.1--unreleased.sql  h3--4.0.2--4.0.3.sql  h3--4.0.2--unreleased.sql  h3--4.0.3--4.1.0.sql  h3--4.0.3--unreleased.sql  h3--4.1.0--4.1.1.sql  h3--4.1.1--4.1.2.sql  h3--4.1.2--4.1.3.sql  h3--4.1.2--unreleased.sql  h3--4.1.3--4.1.4.sql  h3--4.1.3--unreleased.sql  h3--4.1.4--unreleased.sql  h3--4.2.2--unreleased.sql  h3--4.2.3--unreleased.sql
h3/src/: algos.c  algos.h  config.h.in  config.in.h  deprecated.c  edge.c  extension.c  extension.h  extension.in.h  guc.c  guc.h  hierarchy.c  indexing.c  init.c  inspection.c  miscellaneous.c  opclass_btree.c  opclass_gist.c  opclass_hash.c  opclass_spgist.c  operators.c  regions.c  srf.c  srf.h  traversal.c  type.c  upstream.h  upstream_macros.h  vect3.c  vertex.c  wkb.c  wkb.h  wkb_bbox3.c  wkb_bbox3.h  wkb_indexing.c  wkb_linked_geo.c  wkb_linked_geo.h  wkb_regions.c  wkb_split.c  wkb_split.h  (+2 more)
h3/src/binding/: edge.c  hierarchy.c  indexing.c  inspection.c  miscellaneous.c  regions.c  traversal.c  vertex.c
h3/src/include/: extension.in.h
h3/src/lib/: edge.c  hierarchy.c  indexing.c  inspection.c  miscellaneous.c  opclass_btree.c  opclass_hash.c  operators.c  regions.c  traversal.c  type.c  vect3.h
h3/test/: CMakeLists.txt
h3/test/expected/: clustering.out  hierarchy.out  indexing.out  miscellaneous.out  opclass_gist.out  opclass_hash.out  postgis.out  regions.out  type.out  vertex.out
h3/test/sql/: clustering.sql  hierarchy.sql  indexing.sql  miscellaneous.sql  opclass_btree.sql  opclass_gist.sql  opclass_spgist.sql  postgis.sql  regions.sql  traversal.sql  type.sql  uniedges.sql  vertex.sql
h3_postgis/: CMakeLists.txt  pg_validate_extupgrade.toml
h3_postgis/sql/install/: 01-indexing.sql  03-traversal.sql  05-regions.sql  10-operators.sql  20-casts.sql  30-wkb.sql  40-rasters.sql  99-deprecated.sql
h3_postgis/sql/updates/: h3_postgis--4.0.0--4.0.1.sql  h3_postgis--4.0.0--unreleased.sql  h3_postgis--4.0.0.sql  h3_postgis--4.0.1--4.0.2.sql  h3_postgis--4.0.2--4.0.3.sql  h3_postgis--4.0.2--unreleased.sql  h3_postgis--4.0.3--4.1.0.sql  h3_postgis--4.0.3--unreleased.sql  h3_postgis--4.1.0--4.1.1.sql  h3_postgis--4.1.1--4.1.2.sql  h3_postgis--4.1.1--unreleased.sql  h3_postgis--4.1.2--4.1.3.sql  h3_postgis--4.1.2--unreleased.sql  h3_postgis--4.1.3--4.1.4.sql  h3_postgis--4.1.4--unreleased.sql  h3_postgis--4.2.1--unreleased.sql  h3_postgis--4.2.2--unreleased.sql
h3_postgis/src/: extension.c  init.c  wkb.c  wkb.h  wkb_bbox3.c  wkb_bbox3.h  wkb_indexing.c  wkb_linked_geo.c  wkb_linked_geo.h  wkb_regions.c  wkb_split.c  wkb_split.h  wkb_vect3.c  wkb_vect3.h
h3_postgis/test/: CMakeLists.txt
h3_postgis/test/expected/: postgis.out  rasters.out
h3_postgis/test/sql/: postgis.sql  rasters.sql
include/: CMakeLists.txt  deprecate.h  deprecated.h  error.h  extension.in.h  type.h
scripts/: binding-functions.sh  bundle  check-bindings.sh  develop  documentation.sh  excluded-functions  extra-functions  postrelease  release  test.sh
scripts/documentation/: generate.py  sql.lark
scripts/sql2doc/: pyproject.toml  sql.lark
sql/: h3--0.0.0--0.1.0.sql  h3--0.1.0--0.2.0.sql  h3--0.2.0--0.3.0.sql  h3--0.3.0--0.3.1.sql  h3--0.3.1--0.3.2.sql  h3--0.3.2--0.3.3.sql  h3--0.3.2--0.4.0.sql
sql/install/: 0-type.sql  00-type.sql  01-indexing.sql  02-inspection.sql  03-traversal.sql  04-hierarchy.sql  05-regions.sql  06-uniedge.sql  07-miscellaneous.sql  1-indexing.sql  10-extension.sql  10-operators.sql  11-opclass_btree.sql  12-opclass_hash.sql  2-inspection.sql  20-extension.sql  3-traversal.sql  30-deprecated.sql  4-hierarchy.sql  5-regions.sql  6-uniedge.sql  7-miscellaneous.sql  8-postgis.sql  9-extension.sql  99-postgis.sql
sql/updates/: h3--0.0.0--0.1.0.sql  h3--0.1.0--0.2.0.sql  h3--0.1.0.sql  h3--0.2.0--0.3.0.sql  h3--0.3.0--0.3.1.sql  h3--0.4.0--1.0.0.sql  h3--1.0.3--1.0.4.sql  h3--1.0.4--1.0.5.sql  h3--1.0.5--1.0.6.sql  h3--1.0.6--2.0.0.sql  h3--3.4.0--3.4.1.sql  h3--3.4.1--3.5.0.sql  h3--3.5.0--3.5.1.sql  h3--3.5.0--3.6.0.sql  h3--3.6.0--unreleased.sql  (+6 more)
src/: extension.c  extension.h  extension.in.h  h3-pg.c  hierarchy.c  indexing.c  inspection.c  miscellaneous.c  opclass_btree.c  opclass_hash.c  regions.c  traversal.c  type.c  uniedges.c
(+30 files in other folders)
